@@ -3,6 +3,7 @@ package com.yuanno.soulsawakening.entities.projectiles.water;
 import com.yuanno.soulsawakening.Main;
 import com.yuanno.soulsawakening.api.Beapi;
 import com.yuanno.soulsawakening.api.ability.AbilityProjectileRenderer;
+import com.yuanno.soulsawakening.client.renderers.entity.projectile.StretchingProjectileRenderer;
 import com.yuanno.soulsawakening.entities.projectiles.lunar.LunarCrescentProjectile;
 import com.yuanno.soulsawakening.models.CubeModel;
 import net.minecraft.entity.EntityType;
@@ -25,6 +26,11 @@ public class WaterProjectiles {
             () -> Beapi.createEntityType(TidalWaveProjectile::new)
                     .sized(0.5f, 3f)
                     .build(Main.MODID + ":tidal_wave"));
+    public static final RegistryObject<EntityType<WaterPressureProjectile>> WATER_PRESSURE = Beapi.registerEntityType("Water Pressure",
+            () -> Beapi.createEntityType(WaterPressureProjectile::new)
+                    .sized(0.3f, 0.3f)
+                    .build(Main.MODID + ":water_pressure"));
+
     @OnlyIn(Dist.CLIENT)
     @SubscribeEvent
     public static void registerEntityRenderers(FMLClientSetupEvent event)
@@ -36,5 +42,8 @@ public class WaterProjectiles {
         RenderingRegistry.registerEntityRenderingHandler(TIDAL_WAVE.get(), new AbilityProjectileRenderer.Factory(new CubeModel())
                 .setColor("#1ca3ec")
                 .setScale(4D, 6.0D, 2D));
+        RenderingRegistry.registerEntityRenderingHandler(WATER_PRESSURE.get(), new StretchingProjectileRenderer
+                .Factory(new CubeModel()).setStretchScale(0.3, 0.3).setColor("#1ca3ec"));
+
     }
 }
