@@ -14,6 +14,8 @@
 - poison sting ability
 - thunder boost ability
 - thunder ball ability
+- water pressure ability
+- water surge ability
 
 ## changes
 - changed overall activation way (keys) for certain abilities, just check them out in game
